# JackRabbot-Navigation

./: README.md
data_leveldb/: README.md
data_raw/: README.md  out.txt  test.txt  train.txt  val.txt
data_raw/2015-03-04-22-20-12-left-image_rect/: out.txt
data_raw/2015-03-04-22-23-34-left-image_rect/: out.txt
data_raw/2015-03-04-22-24-12-right-image_rect/: out.txt
data_raw/2015-03-04-22-28-30-left-image_rect/: out.txt
data_raw/2015-03-04-22-28-30-right-image_rect/: out.txt
data_raw/2015-03-04-22-32-01-left-image_rect/: out.txt
data_raw/2015-03-04-22-33-21-left-image_rect/: out.txt
doc/CS231A/: milestone.aux  milestone.tex  proposal.aux  proposal.tex
doc/CS231N/: projectproposal.txt
learning/: README.md
learning/simple_net/: lenet_solver.prototxt  lenet_train_test.prototxt  train_lenet.sh  train_lenet_cpu.sh
preprocessing/: README.md  combine3_to_rgb.py  export_bag_data.py  extract_depth.py  extract_hog.py  extract_optflow.py  split_train_val_test.py
sibot/docs/: SIBOT_manual_021215.docx
sibot/manual_pc_setup_files/: .bashrc.swp  bashrc  chrony.conf  start_sibot
sibot/manual_pc_setup_files/sibot_remote_ws/src/sibot/sibot_description/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~  model.config~  package.xml  urdf.rviz
sibot/manual_pc_setup_files/sibot_remote_ws/src/sibot/sibot_description/launch/: display.launch  display.launch~  gazebo.launch  sibot_model.launch  sibot_model.launch~
sibot/manual_pc_setup_files/sibot_remote_ws/src/sibot/sibot_description/robots/: sibot.URDF  sibot.URDF~
visualization/: README.md
(+151 files in other folders)
